<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

  <ImageView
      android:id="@+id/imageStar"
      android:layout_width="@dimen/size_of_star"
      android:layout_height="@dimen/size_of_star"
      android:layout_marginTop="@dimen/value10"
      android:onClick="changeFavourite"
      android:src="@drawable/ic_star_yellow"/>

  <LinearLayout
      android:id="@+id/linearLayout4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/value20"
      android:layout_marginTop="@dimen/value10"
      android:layout_marginRight="@dimen/value20"
      android:background="@drawable/detail_style"
      android:elevation="@dimen/value10"
      android:orientation="vertical"
      android:padding="@dimen/textSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textViewLabelTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/film"
          android:textColor="@android:color/white"
          android:textSize="@dimen/textSize"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textViewTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/value5"
          android:textColor="@android:color/white"
          android:textSize="@dimen/textSize"
          tools:text="La La Land" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textViewLabelRate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/value10"
          android:text="@string/rate"
          android:textColor="@android:color/white"
          android:textSize="@dimen/textSize"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textViewRate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/value5"
          android:layout_marginTop="@dimen/value10"
          android:textColor="@android:color/white"
          android:textSize="@dimen/textSize"
          tools:text="9/10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textViewLabelReleaseDate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/value10"
          android:text="@string/release_date"
          android:textColor="@android:color/white"
          android:textSize="@dimen/textSize"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textViewReleaseDate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/value5"
          android:layout_marginTop="@dimen/value10"
          android:textColor="@android:color/white"
          android:textSize="@dimen/textSize"
          tools:text="22.12.1998" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textViewLabelDescription"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/value25"
          android:text="@string/description"
          android:textColor="@android:color/white"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textViewDescription"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/value10"
          android:lineSpacingMultiplier="1.4"
          android:textColor="@android:color/white"
          tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged." />

    </LinearLayout>
  </LinearLayout>

  <TextView
      android:id="@+id/trailers"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/value10"
      android:layout_marginBottom="@dimen/value10"
      android:text="@string/trailers"
      android:textColor="@color/colorWhite"
      android:textStyle="bold" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewTrailers"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/value20"
      android:layout_marginRight="@dimen/value20"
      android:nestedScrollingEnabled="false" />

  <TextView
      android:id="@+id/reviews"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/value10"
      android:layout_marginBottom="@dimen/value10"
      android:text="@string/Reviews"
      android:textColor="@color/colorWhite"
      android:textStyle="bold" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewReviews"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/value20"
      android:layout_marginRight="@dimen/value20"
      android:layout_marginBottom="@dimen/value10"
      android:nestedScrollingEnabled="false" />
</LinearLayout>
